# IllustratorPluginCmake

./: .gitignore  README.md
samplecode/MenuPlay/: CMakeLists.txt  MenuPlay.vcxproj  pipl.bat
samplecode/MenuPlay/MenuPlay.xcodeproj/: project.pbxproj
samplecode/MenuPlay/Resources/Mac/: MenuPlay.r
samplecode/MenuPlay/Resources/Win/: MenuPlay.rc  Resource.h  plugin.pipl
samplecode/MenuPlay/Source/: MenuPlayID.h  MenuPlayPlugin.cpp  MenuPlayPlugin.h  MenuPlaySuites.cpp  MenuPlaySuites.h
samplecode/common/includes/: AppContext.hpp  ArtMatcher.hpp  CASFault.hpp  FlashUIController.h  HtmlUIController.h  IllustratorSDK.h  IllustratorSDKDebug.pch  IllustratorSDKRelease.pch  Plugin.hpp  PluginStd.h  SDKAboutPluginsHelper.h  SDKDef.h  SDKErrors.h  SDKPlugPlug.h  Suites.hpp  pragma.h
samplecode/common/includes/legacy/: About.h  reportError.h  stringUtils.h
samplecode/common/mac/: AIPluginCommon.xcconfig  AIPluginDebug.xcconfig  AIPluginRelease.xcconfig  Info.plist  PiPL.r  Plugin.r
samplecode/common/source/: AppContext.cpp  ArtMatcher.cpp  FlashUIController.cpp  HtmlUIController.cpp  IllustratorSDK.cpp  Main.cpp  Plugin.cpp  SDKAboutPluginsHelper.cpp  SDKErrors.cpp  SDKPlugPlug.cpp  Suites.cpp
samplecode/common/source/legacy/: About.cpp  reportError.cpp  shellMain.cpp  stringUtils.cpp
samplecode/common/win/: AIPluginCommon.props  PluginMain.def  VersionInfo.rc  pragma.h
